--- a/metamodel/dochub/entities/contexts/plantuml.yaml
+++ b/metamodel/dochub/entities/contexts/plantuml.yaml
@@ -12,12 +12,14 @@ entities:
       #   manifest   - данные архитектуры
       #   components - список компонентов в формате fetchComponents
       #   areas      - список компонентов в формате fetchAreas
+      #   focusId    - идентификатор требующий фокус
       makePumlComponentDiagram: >
         (
           /* Обрабатываем параметры */
           $areas := areas;
           $components := components;
           $manifest := manifest;
+          $focusId := focusId;
         
           $stopBracketsCount := function($a, $b) {$a = 0 ? "}\n" : $a & "}\n"};
           
@@ -47,6 +49,7 @@ entities:
                   $not($isAreaBegin) and $component ? (
                       /* Открываем секцию компонента */
                       $entity := $component.entity ? $component.entity : "component";
+                      $color := $domain = $focusId ? "#FFBBCC" : "";
                       $result := "$Entity(\"" 
                           & $entity 
                           & "\", \""
@@ -55,16 +58,25 @@ entities:
                           & $domain                          
                           & ", \""
                           & $component.type
+                          & "\", \""
+                          & $color
                           & "\" )\n";
         
                       /* Добавляем аспекты */
                       $result := $result & $join($component.aspects.(
                           $aspect := $lookup($manifest.aspects, $);
                           $title := $aspect ? $aspect.title : $;
+                          $ = $focusId ?
                           "$EntityAspect(\""
                           & $entity
-                          & "\",\"[[/architect/aspects/"
-                          & $
+                          & "\",\" <back:#FFBBCC>"
+                          & $title
+                          & "\")\n"
+                          :
+                          "$EntityAspect(\""
+                          & $entity
+                          & "\",\"* [[/architect/aspects/"
+                          & $encodeUrlComponent($)
                           & " " 
                           & $title
                           & "]]\")\n"
@@ -117,6 +129,10 @@ entities:
               title: Идентификатор контекста
               type: string
               pattern: ^[0-9a-zA-Z][a-zA-Z0-9_-]*(\.[a-zA-Z][a-zA-Z0-9_-]*)*$
+            "dh-focus-id":
+              title: Идентификатор требующий подсветку
+              type: string
+              pattern: ^[0-9a-zA-Z][a-zA-Z0-9_-]*(\.[a-zA-Z][a-zA-Z0-9_-]*)*$
           required:
             - dh-context-id
         type: plantuml
@@ -152,6 +168,7 @@ entities:
         source: >
           (
             $id := $params."dh-context-id";
+            $focusId := $params."dh-focus-id";
             /* Получаем доступ к оригинальным данным */
             $manifest := _origin ? _origin : $;
             /* Получаем контекст */
@@ -165,24 +182,30 @@ entities:
             $defFunctions := $manifest.entities.contexts.api;
           
             /* Получаем коллекцию дефолтных параметров */
-            $defConfig := $manifest.entities.contexts.config; 
+            $defConfig := $manifest.entities.contexts.config;
+          
+            /* Получаем параметры из контекста */
+            $customConfig := $context.config;
+          
+            /* Формируем итоговый конфиг */
+            $config := $mergedeep([$defConfig,$customConfig]);
           
             /* Определяем движок рендеринга */
             $renderCore := $lookup({
               "elk": "!pragma layout elk",
               "smetana": "!pragma layout smetana"
-            }, $defConfig.renderCore);
+            }, $config.renderCore);
 
             /* Формируем заголовок */
             $header := "$Header(\"" & ($context.title ? $context.title : $id ) & "\", \"" & $context.uml."$autor" & "\", \"" & $context.uml."$version" & "\" , \"" & $context.uml."$moment" & "\")\n";
 
             /* Получаем все компоненты входящие в контекст */
-            $components := $eval($defFunctions.fetchComponents, {
+            $components := $eval($defFunctions.fetchComponents, $merge([$params, {
               "manifest": $manifest,
               "contextId": $id,
               "extra-links": $isExtraLinks,
               "componentId": $params.componentId
-            });
+            }]));
 
             /* Генерируем области */
             $areas := $eval($defFunctions.fetchAreas, {
@@ -193,7 +216,8 @@ entities:
             $elements := $eval($defFunctions.makePumlComponentDiagram, {
               "manifest": $manifest,
               "areas": $areas,
-              "components": $components
+              "components": $components,
+              "focusId": $focusId
             });
 
             /* Получаем список связей */
