--- a/metamodel/dochub/root.yaml
+++ b/metamodel/dochub/root.yaml
@@ -1,3 +1,14 @@
+$package:
+  dochub: # Идентификатор пакета
+    # Краткое название пакета
+    name: DocHub метамодель
+    # Поставщик
+    vendor: R.Piontik
+    # Описание
+    description: Облегченная метамодель для описания прикладного слоя
+    # Версия
+    version: 3.8.0
+    
 # Базовая метамодель DocHub. Включает в себя сущности
 #   components  - Архитектурные компоненты. 
 #   aspects     - Архитектурные аспекты. Позволяют выделить и отобразить на 
