--- a/documentation/docs/manual/plugins/root.yaml
+++ b/documentation/docs/manual/plugins/root.yaml
@@ -20,6 +20,7 @@ docs:
         type: test
     source: examples/example.html
 
+
   dochub.plugins.svg_file:
     title: Пример использования SVG
     type: svg
@@ -53,6 +54,93 @@ docs:
     type: markdown
     source: svg_inline.md
     location: DocHub/Руководство/Плагины/Примеры/SVG
+
+  dochub.plugins.drawio:
+    location: DocHub/Руководство/Плагины/Примеры/Drawio
+    type: markdown
+    source: drawio_intro.md
+
+  dochub.plugins.drawio.as_is:
+    location: DocHub/Руководство/Плагины/Примеры/Drawio/Файл как есть
+    type: drawio
+    template: templates/example.drawio
+
+  dochub.plugins.drawio.parametrized:
+    location: DocHub/Руководство/Плагины/Примеры/Drawio/Применили пост. обработку
+    type: drawio
+    template: templates/example.drawio
+    source: >
+      (
+        {
+        "xml_mutators" : [
+            { "id": 1, "xpath": "//*[@id = 'test.sys1.c1']",
+                "params": { "style_self" : false},
+                "operation": {
+                    "attrs": {
+                        "c4Description": "Описание контейнера 1",
+                        "c4Name": "Имя контейнера 1",
+                        "c4Technology" : "Java, Spring"
+                    },
+                    "style": {
+                        "fillColor": "red"
+                    }
+                }
+            },
+            { "id": 2, "xpath": "//*[@id = 'test.sys1.c2']",
+                "params": { "style_self" : false},
+                "operation": {
+                    "attrs": {
+                        "c4Description": "Описание контейнера 2",
+                        "c4Name": "Имя контейнера 2",
+                        "c4Technology" : "Java17, Spring"
+                    },
+                    "style": {
+                        "fillColor": "green"
+                    }
+                }
+            },
+            { "id": 3, "xpath": "//*[@id = 'test.sys1.c3']",
+                "params": { "style_self" : false},
+                "operation": {
+                    "attrs": {
+                        "c4Description": "Описание контейнера 3",
+                        "c4Name": "Имя контейнера 3",
+                        "c4Technology" : "Java8, Springboot"
+                    },
+                    "style": {
+                        "fillColor": "blue"
+                    }
+                }
+            },
+            { "id": 4, "xpath": "//*[@id = 'test.sys1']",
+                "params": { "style_self" : false},
+                "operation": {
+                    "attrs": {
+                        "c4Application": "Приложение 1",
+                        "c4Name": "Имя ИС 1"
+                    },
+                    "style": {
+                        "fillColor": "grey"
+                    }
+                }
+            },        
+            { "id": 5, "xpath": "//*[@id = 'test.sys1.conn1']",
+                "params": { "style_self" : false},
+                "operation": {
+                    "attrs": {
+                        "c4Description": "Описание связи между компонентами",
+                        "c4Technology": "Технология HTTP",
+                        "extra_data": "Дополнительная информация отображаемая в tooltip элемента"
+                    },
+                    "style": {
+                        "strokeColor": "orange"
+                    }
+                }
+            }        
+            ]
+        }
+      )
+
 
   dochub.plugins.devtool_new:
     location: DocHub/Руководство/Плагины/Примеры/DevTool
